Setting up individual probe configs (#21)
* Added configs for multiple probes
* UI working with multiple configs
* Colored needle
* Refactored API paths and names
