# backend/monitors.go
@@ -2,11 +2,17 @@ package backend
 
 import (
 	"github.com/declanshanaghy/bbqberry/models"
-	"github.com/declanshanaghy/bbqberry/restapi/operations/temperature"
+	"github.com/declanshanaghy/bbqberry/restapi/operations/monitors"
 )
 
-// GetTemperatureMonitors reads all configured temperature monitors
-func GetTemperatureMonitors(params *temperature.GetMonitorsParams) (m models.TemperatureMonitors,
+// CreateMonitor reads all configured temperature monitors
+func CreateMonitor(params *monitors.CreateMonitorParams) (m models.TemperatureMonitors,
+	err error) {
+	return m, err
+}
+
+// GetMonitors reads all configured temperature monitors
+func GetMonitors(params *monitors.GetMonitorsParams) (m models.TemperatureMonitors,
 	err error) {
 	return m, err
 }
