# models/config.go
@@ -1,54 +1,0 @@
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/validate"
-)
-
-// Config config
-// swagger:model Config
-type Config struct {
-
-	// num probes
-	// Required: true
-	// Maximum: 8
-	// Minimum: 0
-	NumProbes *int32 `json:"num-probes"`
-}
-
-// Validate validates this config
-func (m *Config) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateNumProbes(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *Config) validateNumProbes(formats strfmt.Registry) error {
-
-	if err := validate.Required("num-probes", "body", m.NumProbes); err != nil {
-		return err
-	}
-
-	if err := validate.MinimumInt("num-probes", "body", int64(*m.NumProbes), 0, false); err != nil {
-		return err
-	}
-
-	if err := validate.MaximumInt("num-probes", "body", int64(*m.NumProbes), 8, false); err != nil {
-		return err
-	}
-
-	return nil
-}
