# models/temperature_monitors.go
@@ -4,22 +4,38 @@ package models
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"strconv"
+
 	strfmt "github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
 
 	"github.com/go-openapi/errors"
-	"github.com/go-openapi/validate"
 )
 
 // TemperatureMonitors temperature monitors
 // swagger:model TemperatureMonitors
-type TemperatureMonitors map[string][]TemperatureMonitor
+type TemperatureMonitors []*TemperatureMonitor
 
 // Validate validates this temperature monitors
 func (m TemperatureMonitors) Validate(formats strfmt.Registry) error {
 	var res []error
 
-	if err := validate.Required("", "body", TemperatureMonitors(m)); err != nil {
-		return err
+	for i := 0; i < len(m); i++ {
+
+		if swag.IsZero(m[i]) { // not required
+			continue
+		}
+
+		if m[i] != nil {
+
+			if err := m[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName(strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	if len(res) > 0 {
